--- a/client/client/index.html
+++ b/client/client/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <base href="/" />
-    <title>Angular 2 User Registration and Login Example</title>
+    <title>MyPikabu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- bootstrap css -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
 
     <!-- application css -->
     <link href="app.css" rel="stylesheet" />
@@ -17,12 +17,24 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
+    <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
+
     <script src="systemjs.config.js"></script>
     <script>
         System.import('app').catch(function (err) { console.error(err); });
     </script>
 </head>
 <body>
-    <app>Loading...</app>
+    <app>
+        <div class="spinner-layer spinner-green">
+        <div class="circle-clipper left">
+            <div class="circle"></div>
+        </div><div class="gap-patch">
+        <div class="circle"></div>
+    </div><div class="circle-clipper right">
+        <div class="circle"></div>
+    </div>
+    </div>
+    </app>
 </body>
 </html>
