--- a/client/client/index.html
+++ b/client/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" media="screen,projection" href="node_modules/materialize-css/dist/css/materialize.min.css">
 
     <!-- application css -->
     <link href="app.css" rel="stylesheet" />
@@ -17,24 +17,18 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
-
     <script src="systemjs.config.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
     <script>
         System.import('app').catch(function (err) { console.error(err); });
     </script>
 </head>
 <body>
     <app>
-        <div class="spinner-layer spinner-green">
-        <div class="circle-clipper left">
-            <div class="circle"></div>
-        </div><div class="gap-patch">
-        <div class="circle"></div>
-    </div><div class="circle-clipper right">
-        <div class="circle"></div>
-    </div>
-    </div>
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
     </app>
 </body>
 </html>
